CGMES : Implement a pre-processor that completes the CGMES model with missing containers before starting the conversion
Signed-off-by: Luma <zamarrenolm@aia.es>