@@ -9,10 +9,11 @@ package com.powsybl.cgmes.conversion;
 import com.google.common.jimfs.Configuration;
 import com.google.common.jimfs.Jimfs;
 import com.powsybl.cgmes.conformity.CgmesConformity1Catalog;
+import com.powsybl.cgmes.model.CgmesModel;
 import com.powsybl.cgmes.model.GridModelReferenceResources;
+import com.powsybl.commons.parameters.Parameter;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.NetworkFactory;
-import com.powsybl.commons.parameters.Parameter;
 import com.powsybl.triplestore.api.TripleStore;
 import org.junit.After;
 import org.junit.Before;
@@ -28,6 +29,7 @@ import static org.junit.Assert.assertTrue;
 /**
  * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
  */
+// FIXME(Luma) rename to CgmesImportProcessorsTest (we will test both pre- and post- processors)
 public class CgmesImportPostProcessorTest {
 
     class FakeCgmesImportPostProcessor implements CgmesImportPostProcessor {
@@ -49,9 +51,30 @@ public class CgmesImportPostProcessorTest {
         }
     }
 
+    class FakeCgmesImportPreProcessor implements CgmesImportPreProcessor {
+
+        private final String name;
+
+        FakeCgmesImportPreProcessor(String name) {
+            this.name = Objects.requireNonNull(name);
+        }
+
+        @Override
+        public String getName() {
+            return name;
+        }
+
+        @Override
+        public void process(CgmesModel cgmes) {
+            activatedPreProcessorNames.add(getName());
+        }
+    }
+
     private FileSystem fileSystem;
 
     private GridModelReferenceResources modelResources;
+
+    private final List<String> activatedPreProcessorNames = new ArrayList<>();
 
     private final List<String> activatedPostProcessorNames = new ArrayList<>();
 
@@ -69,7 +92,7 @@ public class CgmesImportPostProcessorTest {
 
     @Test
     public void testParameters() {
-        CgmesImport cgmesImport = new CgmesImport(List.of(new FakeCgmesImportPostProcessor("foo")));
+        CgmesImport cgmesImport = new CgmesImport(Collections.emptyList(), List.of(new FakeCgmesImportPostProcessor("foo")));
         Parameter parameter = cgmesImport.getParameters().stream()
                 .filter(p -> p.getName().equals("iidm.import.cgmes.post-processors"))
                 .findFirst()
@@ -79,7 +102,7 @@ public class CgmesImportPostProcessorTest {
 
     @Test
     public void testEmpty() {
-        CgmesImport cgmesImport = new CgmesImport(Collections.singletonList(new FakeCgmesImportPostProcessor("foo")));
+        CgmesImport cgmesImport = new CgmesImport(Collections.emptyList(), Collections.singletonList(new FakeCgmesImportPostProcessor("foo")));
         Properties properties = new Properties();
         cgmesImport.importData(modelResources.dataSource(), NetworkFactory.findDefault(), properties);
         assertTrue(activatedPostProcessorNames.isEmpty());
@@ -87,12 +110,23 @@ public class CgmesImportPostProcessorTest {
 
     @Test
     public void testList() {
-        CgmesImport cgmesImport = new CgmesImport(Arrays.asList(new FakeCgmesImportPostProcessor("foo"),
+        CgmesImport cgmesImport = new CgmesImport(Collections.emptyList(), Arrays.asList(new FakeCgmesImportPostProcessor("foo"),
                                                                                 new FakeCgmesImportPostProcessor("bar"),
                                                                                 new FakeCgmesImportPostProcessor("baz")));
         Properties properties = new Properties();
         properties.put(CgmesImport.POST_PROCESSORS, Arrays.asList("foo", "baz"));
         cgmesImport.importData(modelResources.dataSource(), NetworkFactory.findDefault(), properties);
         assertEquals(Arrays.asList("foo", "baz"), activatedPostProcessorNames);
+    }
+
+    @Test
+    public void testListPre() {
+        CgmesImport cgmesImport = new CgmesImport(Arrays.asList(new FakeCgmesImportPreProcessor("foo"),
+                new FakeCgmesImportPreProcessor("bar"),
+                new FakeCgmesImportPreProcessor("baz")), Collections.emptyList());
+        Properties properties = new Properties();
+        properties.put(CgmesImport.PRE_PROCESSORS, Arrays.asList("foo", "baz"));
+        cgmesImport.importData(modelResources.dataSource(), NetworkFactory.findDefault(), properties);
+        assertEquals(Arrays.asList("foo", "baz"), activatedPreProcessorNames);
     }
 }
